converting documents, setting up indexes

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,3 +9,16 @@ services:
           - ./docs:/html
           - ./:/book
 
+    asciidoctor:
+        image: asciidoctor/docker-asciidoctor
+
+        volumes:
+          - ./content:/documents
+
+    html:
+        image: asciidoctor/docker-asciidoctor
+
+        volumes:
+        - ./content:/documents
+
+
