--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
           - ./content:/documents
           - ./docs:/html
 
-        command: asciidoctor -o /html/index.html -d book index.adoc
+        command: asciidoctor -o /html/index.html -d book -r ./ext/google-analytics-docinfoprocessor.rb index.adoc
 
     pdf:
         image: asciidoctor/docker-asciidoctor
